--- a/CSS/main.css
+++ b/CSS/main.css
@@ -13,6 +13,10 @@
 
 }
 
+#newto {
+
+}
+
 form {
     font-family: Arial, Helvetica, sans-serif
 }
@@ -29,6 +33,12 @@ form {
     width: 402px;
     display: block;
     margin: 0 auto;
+}
+
+.btn-primary {
+    width: 400px;
+    display: block
+    margin; 0 auto;
 }
 
 .form-group {
